api-faulty-log-training/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app
  namespace: api-app
spec:
  selector:
    app: api-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
